# aj

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test-and-build.yml
aj/: Cargo.toml  README.md
aj/examples/: background_job.rs  cancel_job.rs  cron_job.rs  doc_example.rs  retry_job.rs  schedule_job.rs  simple_job.rs  update_job.rs
aj/src/: lib.rs  queue.rs
aj_core/: Cargo.toml  README.md
aj_core/src/: aj.rs  error.rs  lib.rs  queue.rs
aj_core/src/backend/: mem.rs  redis.rs  types.rs
aj_core/src/job/: executable.rs  job_context.rs  mod.rs  retry.rs
aj_core/src/plugin/: job_plugin.rs  mod.rs
aj_macro/: Cargo.toml  README.md
aj_macro/src/: lib.rs
examples/cancel_job/: Cargo.toml
examples/cancel_job/src/: main.rs
examples/cron_and_schedule/: Cargo.toml
examples/cron_and_schedule/src/: main.rs
examples/in-memory/: Cargo.toml
examples/in-memory/src/: cancel_job.rs  cron_job.rs  macro_job.rs  main.rs  print_job.rs  retry_job.rs  schedule_job.rs  update_job.rs
examples/normal/: Cargo.toml
examples/normal/src/: cancel_job.rs  cron_job.rs  default_print_job.rs  macro_job.rs  main.rs  plugin.rs  retry_job.rs  schedule_job.rs  update_job.rs
examples/redis_backend/: Cargo.toml
examples/redis_backend/src/: main.rs
examples/retry/: Cargo.toml
examples/retry/src/: main.rs
examples/simple_job/: Cargo.toml
examples/tokio/: Cargo.toml
examples/tokio/src/: main.rs
examples/update_job/: Cargo.toml
examples/update_job/src/: main.rs
src/: aj.rs  error.rs  lib.rs  queue.rs
src/job/: mod.rs  retry.rs
src/util/: mod.rs
