[package]
name = "aj"
version = "0.5.1"
edition = "2021"
authors = ["cptrodgers <me@cptrodgers.com>"]
description = "Background Job based on Actix"
readme = "README.md"
repository = "https://github.com/cptrodgers/aj"
license = "MIT OR Apache-2.0"
keywords = ["background-job", "cron", "schedule", "interval"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "aj"


[dependencies]
aj_macro = { version = "=0.5.1", path = "../aj_macro" }
aj_core = { version = "=0.5.1", path = "../aj_core" }
serde = { version = "1.0.64", features = ["derive"] }
actix-rt = "2.2"
