[package]
name = "aj_macro"
version = "0.7.1"
edition = "2021"
authors = ["cptrodgers <me@cptrodgers.com>"]
description = "Derive Macro for aj"
readme = "README.md"
repository = "https://github.com/cptrodgers/aj"
license = "MIT OR Apache-2.0"
keywords = ["background-job", "cron", "schedule", "interval"]
include = ["**/*.rs", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
aj_core = { version = "=0.7.1", path = "../aj_core" }
convert_case = "0.6.0"
